--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 </head>
 
 <body style="background-color: blue;">
-
 <h1> Welcome to my webpage.
 </h1>
+<p>hey my name is Kevin Odezugo.
+    im from Nigeria.
+</p>
+
 <h2>hobbies</h2>
 
 <ol>
@@ -25,8 +28,17 @@
 
 </ol>
 
-<img src="arrowLeft.png">
-<img src="right-arrow-vector-icon-black-symbol-navigation-163045948.jpg">
+<a href="https://kevinniyonzima.github.io/html-basics/">
+<p align="right"> 
+    <img src="right-arrow-vector-icon-black-symbol-navigation-163045948.jpg" width="100"
+
+</p>
+</a>
+     <a href="https://klarida.github.io/html-basic/Index.html">
+<p align="left">   
+<img src="arrowLeft.png" width="100">
+</p>
+    </a>
 
 <img src="win_kevin.jpg" width="300" height="200" style="border: 0px;" 
 
